@@ -321,6 +321,7 @@ S3method(linearHypothesis, mlm)
 S3method(linearHypothesis, polr)
 S3method(linearHypothesis, rlm)
 S3method(linearHypothesis, svyglm)
+S3method(linearHypothesis, lmList)
 S3method(linearHypothesis, nlsList)
 S3method(linearHypothesis, survreg)
 S3method(Manova, mlm)
