@@ -12,7 +12,9 @@ Changes to Version 3.0-11
   
   o Make linearHypothesis() and Anova() work with "svyolr" objects via their default methods.
   
-  o Regularize handling of vcov. argument in Anova() and linearHypothesis()
+  o Regularize handling of vcov. argument in Anova() and linearHypothesis().
+  
+  o New linearHypothesis.lmList() method.
 
 Changes to Version 3.0-10
 
